delete input file after successful conversion
adds conversionLog to store conversion infos
